<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instructor.session.SessionFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <VideoView
        android:id="@+id/bgVideoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:id="@+id/v_guideline1"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="58dp"
        app:layout_constraintGuide_percent="0.15104167"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:id="@+id/v_guideline2"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="329dp"
        app:layout_constraintGuide_percent="0.8567708"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:id="@+id/v_guideline3"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="118dp"
        app:layout_constraintGuide_percent="0.30729166"/>

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/h_guideline1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="326dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.5749559"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_view"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/mesh_800_transp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gif_view"
        android:textColor="@color/primaryText"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="Start a session"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:gravity="center_horizontal"
        android:text="Your students will appear below once they check in."/>

    <TextView
        android:id="@+id/class_spinner_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        android:layout_margin="4dp"
        android:textColor="@color/primaryText"
        android:text="@string/pick_a_class"/>

    <Spinner
        android:id="@+id/classes_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/class_spinner_prompt"
        android:spinnerMode="dialog"
        android:prompt="@string/pick_a_class"/>

    <Button
        android:id="@+id/start_session_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/class_spinner_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/start_session"/>

    <LinearLayout
        android:id="@+id/ongoing_class_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start_session_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@color/transparent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/transparent">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_cancel_button"
                android:textColor="@color/red"
                android:textAllCaps="false"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/save_session_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/save_session"/>
        </LinearLayout>

        <TextView
            android:id="@+id/no_of_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:paddingBottom="14dp"
            android:textColor="#008B8B"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/present_students_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>