<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".instructor.session.SessionFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/mesh_800_transp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:textColor="@color/primaryText"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="Start a session"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Your students will appear here once they check in."/>

    <TextView
        android:id="@+id/class_spinner_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:text="@string/pick_a_class"/>

    <Spinner
        android:id="@+id/classes_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:spinnerMode="dialog"
        android:background="@drawable/background_class"
        android:prompt="@string/pick_a_class"/>

    <Button
        android:id="@+id/start_session_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_save_button"
        android:text="@string/start_session"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/ongoing_class_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/Base.CardView"
            android:id="@+id/class_detail_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_class"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            android:visibility="gone">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/class_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/prefix_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="CSC"/>

                <TextView
                    android:id="@+id/number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/prefix_tv"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="201"/>

                <TextView
                    android:id="@+id/dash1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/number_tv"
                    app:layout_constraintEnd_toStartOf="@id/name_tv"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text=" - "/>

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/number_tv"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="Intro to Programming"/>

                <ImageView
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/days_of_the_week"
                    app:srcCompat="@drawable/ic_calendar_colored_24dp"/>

                <TextView
                    android:id="@+id/days_of_the_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/calendar"
                    app:layout_constraintTop_toBottomOf="@id/prefix_tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="MWF"/>

                <ImageView
                    android:id="@+id/clock_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/start_time"
                    android:layout_margin="@dimen/text_margin"
                    app:srcCompat="@drawable/ic_clock_colored_24dp"/>

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/end_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="2:00 pm"/>

                <TextView
                    android:id="@+id/dash2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/start_time"
                    app:layout_constraintEnd_toStartOf="@id/end_time"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="-"/>

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="2:50 pm"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/ongoing_class_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/background_cancel_button"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/save_session_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/background_save_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/save_session"/>
        </LinearLayout>

        <TextView
            android:id="@+id/no_of_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="#1a79ff"
            android:textSize="16dp"
            android:text="Checked-in students: 0"/>

        <ListView
            android:id="@+id/present_students_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/transparent"/>

    </LinearLayout>

</LinearLayout>